--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "rusty_sapphire"
+name = "sapphire"
 version = "0.1.0"
-default-run="rusty_sapphire"
+default-run="sapphire"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
